# 2025HLFMA

./: README.md
Raspberry_control/: bluetooth_remote_115200.py  bluetooth_remote_receiver.py  bt410_test.py  bt_test.py  debug_gpio.py  motor_bluetooth_controller.py  test_remote_signals.py
desktop_ros2_ws/: parallel_left.csv  parallel_right.csv  recording_20250927_153024.csv  recording_20250927_154016.csv  recording_20250927_154109.csv  recording_20250927_154343.csv  recording_20250927_154521.csv  recording_20250927_161259.csv  recording_20250927_161340.csv  t_in.csv  t_left.csv  t_right.csv
desktop_ros2_ws/adress/: fastdds.xml
desktop_ros2_ws/src/camera_test/: setup.py
desktop_ros2_ws/src/gps/: CMakeLists.txt  package.xml  setup.py
desktop_ros2_ws/src/gps/config/: navsat_config.yaml  navsat_config.yaml.backup  ntrip_config.yaml  ublox_config.yaml
desktop_ros2_ws/src/gps/gps/: path_publisher.py  path_recorder.py  sensor_fusion_node.py  sensor_fusion_node2.py  sensor_fusion_node3.py
desktop_ros2_ws/src/gps/launch/: gps.launch.py  pursuit.launch.py  record.launch.py
desktop_ros2_ws/src/gps/paths/: .~lock.edited_path.csv#  150.csv  150.osm  adfasdffafadfadfadfadfa.csv  edited_path.csv  edited_path.osm  f_150.csv  final_edited_path.csv  final_edited_path_mission.csv  final_edited_path_mission1.csv  final_edited_path_mission_smoothed.csv  fm_150.csv  fpkm.csv  hong.csv  hongf.csv  pk.csv  pk.osm  yong.csv  yongf.osm  yongf1.csv  yongf2.csv
desktop_ros2_ws/src/gps/scripts/: add_curvature.py  mission_planner.py  visualize_path.py
(+52 files in other folders)
